examples/misc/error/compilation/eval_match_let-decl.bfml
let a :: b =
  let _ = 12345 in
  nil

let main = []